--- a/stylesheet.css
+++ b/stylesheet.css
@@ -239,13 +239,9 @@ body {
 }
 
 /* form */
-body {
-	background-color: #252321;
-}
-
 .form {
-	height: 500px;
-	width: 650px;
+	height: 380px;
+	width: 380px;
 	background-color: white;
 	margin: auto;
 	border-radius: 3px;
@@ -253,48 +249,48 @@ body {
 
 .text {
 	text-align: center;
-	font-size: 40px;
+	font-size: 30px;
 	font-weight: bold;
-	font-family: monospace;
 	padding-top: 15px;
 }
 
 .nama {
-	margin-left: 60px;
+	margin-left: 97px;
 	margin-bottom: 10px;
-	height: 50px;
-	width: 80%;
+	height: 30px;
+	width: 50%;
 	text-align: center;
-	font-size: 20px;
 }
 
 .email {
-	margin-left: 60px;
+	margin-left: 97px;
 	margin-bottom: 10px;
-	height: 50px;
-	width: 80%;
+	height: 30px;
+	width: 50%;
 	text-align: center;
-	font-size: 20px;
 }
 
 .pesan {
-	margin-left: 60px;
+	margin-left: 97px;
 	margin-bottom: 10px;
-	height: 100px;
-	width: 80%;
+	height: 70px;
+	width: 50%;
 	text-align: center;
-	font-size: 20px;
 }
 
 .kirim {
-	margin-left: 43%;
-	font-size: 18px;
-	height: 50px;
-	background-color: #252321;
-	color: white;
+	margin-left: 150px;
+	margin-top: 15px;
+	cursor: progress;
+	color:  white;
+	height: 40px;
+	border: none;
+	background-color: #252321; 
 	border-radius: 4px;
 }
 
+
+	
 /* footer */
 textarea {
     resize: none;
