--- a/stylesheet.css
+++ b/stylesheet.css
@@ -16,7 +16,7 @@ body {
 .container-banner {
     width: 100%;
     padding: 0;
-    margin: -10px 0 0 -8px;
+    margin: 0;
     height: 500px;
 }
 
@@ -26,14 +26,18 @@ body {
 .slide h1 {
     font-size: 40px;
     text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
-    font-family: 'Raleway';
+    opacity: 0.7;
+}
+
+.slide h2:hover, .slide h1:hover, .slide p:hover {
+    opacity: 1;
 }
 
 .slide p {
     font-size: 25px;
     font-style: italic;
     text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
-    font-family: 'Raleway';
+    opacity: 0.7;
 }
 
 /* slide -> hr */
@@ -54,7 +58,7 @@ body {
     text-decoration: none;
     transition: 0.5s;
     font-weight: bold;
-    font-size: 25px;
+    font-size: 20px;
 }
 
 .slide .btn:hover {
@@ -136,113 +140,115 @@ body {
     height: 680px;
 }
 .clear {
-  clear: left;
+  	clear: left;
 }
 
 .container {
-  max-width: 1170px;
-  width: 100%;
-  padding: 0 15px;
-  margin: 0 auto;
+	max-width: 1170px;
+	width: 100%;
+	padding: 0 15px;
+	margin: 0 auto;
 }
 
 
 .btn {
-  padding: 12px 24px;
-  color: white;
-  display: inline-block;
-  opacity: 0.8;
-  border-radius: 4px;
-  text-align: center;
+	padding: 12px 24px;
+	color: white;
+	display: inline-block;
+	opacity: 0.8;
+	border-radius: 4px;
+	text-align: center;
 }
 
 .btn:hover {
-  opacity: 1;
+  	opacity: 1;
 }
 
 .fa {
-  margin-right: 5px;
+  	margin-right: 5px;
 }
 
 
 .product-wrapper {
-  padding-bottom: 80px;
-  padding-left: 5%;
-  padding-right: 5%;
-  background-color: #ffffff;
-  text-align: center;
+  	padding-bottom: 80px;
+  	padding-left: 5%;
+  	padding-right: 5%;
+  	background-color: #ffffff;
+  	text-align: center;
 }
 
 .heading {
-  padding-top: 80px;
-  padding-bottom: 50px;
-  color: #000000;
+	padding-top: 80px;
+	padding-bottom: 50px;
+	color: #000000;
 }
 
 .heading h2 {
-  font-weight: normal;
+  	font-weight: normal;
 }
 
 .product {
-  float: left;
-  width: 25%;
+  	float: left;
+  	width: 25%;
 }
-.box-img {
 
+.box-img {
 	transition: ease all 0.5s;
 }
+
 .box-img:hover {
 	cursor: pointer;
 	transform: scale(1.1);
 	background: #ffffff;
 }
+
 .product-icon {
-  position: relative;
+  	position: relative;
 }
 
 .product-icon p {
-  position: absolute;
-  top: 44%;
-  width: 100%;
-  color: white;
+  	position: absolute;
+  	top: 44%;
+  	width: 100%;
+  	color: white;
 }
 
 .text-contents {
-  width: 80%;
-  display: inline-block;
-  margin-top: 15px;
-  font-size: 20px;
-  color: #000000;
+  	width: 80%;
+  	display: inline-block;
+  	margin-top: 15px;
+  	font-size: 20px;
+  	color: #000000;
 }
 
 .heading h3 {
-  font-weight: normal;
+  	font-weight: normal;
 }
 
 .order-wrapper {
-  border-bottom: 1px solid #eee;
-  padding-bottom: 80px;
-  text-align: center;
+  	border-bottom: 1px solid #eee;
+  	padding-bottom: 80px;
+  	text-align: center;
 }
 
 .order {
-  padding: 15px 40px;
-  background-color: #000000;
-  cursor: pointer;
-  box-shadow: 0 7px #808080;
+  	padding: 15px 40px;
+  	background-color: #000000;
+  	cursor: pointer;
+  	box-shadow: 0 7px #808080;
 }
 
 .order:active {
-  position: relative;
-  top: 7px;
-  box-shadow: none;
+  	position: relative;
+  	top: 7px;
+  	box-shadow: none;
 }
 
 /* form */
 .form {
+	padding: 40px 0;
 	height: 500px;
-	width: 650px;
-	background-color: white;
+	background-color: #f7f7f7;
 	margin: auto;
 	border-radius: 3px;
 }
@@ -251,66 +257,73 @@ body {
 	text-align: center;
 	font-size: 40px;
 	font-weight: bold;
-	font-family: monospace;
-	padding-top: 15px;
+	margin: 10px 500px;
 }
 
-.nama {
-	margin-left: 60px;
-	margin-bottom: 10px;
+.nama, .email {
 	height: 50px;
-	width: 80%;
+	width: 500px;
 	text-align: center;
 	font-size: 20px;
-}
-
-.email {
-	margin-left: 60px;
-	margin-bottom: 10px;
-	height: 50px;
-	width: 80%;
-	text-align: center;
-	font-size: 20px;
+	margin: 10px 500px;
 }
 
 .pesan {
-	margin-left: 60px;
-	margin-bottom: 10px;
+	margin: 10px 500px;
 	height: 100px;
-	width: 80%;
+	width: 500px;
 	text-align: center;
 	font-size: 20px;
 }
 
+    /* Animasi tombol */
 .kirim {
-	margin-left: 43%;
-	font-size: 18px;
 	height: 50px;
-	background-color: #252321;
-	color: white;
-	border-radius: 4px;
+	font-size: 17px;
+	margin: 10px 500px;
+    display: inline-block;
+    border-radius: 4px;
+    background-color: black;
+    opacity: 0.8;
+    border: none;
+    color: #fff;
+    text-align: center;
+    padding: 15px;
+    width: 500px;
+    transition: all 0.5s;
+    cursor: pointer;
 }
 
+.kirim:hover {
+	opacity: 1;
+}
+
+.kirim span {
+    cursor: pointer;
+    display: inline-block;
+    position: relative;
+    transition: 0.5s;
+}
+
+.kirim span:after {
+    content: '\00bb';
+    position: absolute;
+    opacity: 0;
+    top: 0;
+    right: -20px;
+    transition: 0.5s;
+}
+
+.kirim:hover span {
+    padding-right: 25px;
+}
+
+.kirim:hover span:after {
+    opacity: 1;
+    right: 0;
+}
+	
 /* footer */
-textarea {
-    resize: none;
-    width: 600px;
-    height: 250px;
-    padding: 15px;
-    font-size: 15px;
-    border: 1px solid #dee7ec;
-}
-
-input {
-    padding: 15px;
-    font-size: 15px;
-    border: 1px solid #dee7ec;
-}
-
-.footer {
-    margin-top: 50px;
-}	
-
 .lower-footer {
     color: #8D94A6;
     background-color: #2f3640;
@@ -348,64 +361,6 @@ input {
     color: #8D94A6;
 }
 
-.contact-input {
-    width: 270px;
-    margin-right: 60px;
-}
-
-.contact-form {
-    padding: 30px 100px;
-}
-
-.nama-contact {
-    float: left;
-}
-
-.section-title {
-    font-size: 18px;
-    margin-bottom: 10px;
-}
-
-
-    /* Animasi tombol */
-.contact-submit {
-    display: inline-block;
-    border-radius: 4px;
-    background-color: #0be881;
-    border: none;
-    color: #fff;
-    text-align: center;
-    font-size: 15px;
-    padding: 15px;
-    width: 200px;
-    transition: all 0.5s;
-    cursor: pointer;
-}
-
-.contact-submit span {
-    cursor: pointer;
-    display: inline-block;
-    position: relative;
-    transition: 0.5s;
-}
-
-.contact-submit span:after {
-    content: '\00bb';
-    position: absolute;
-    opacity: 0;
-    top: 0;
-    right: -20px;
-    transition: 0.5s;
-}
-
-.contact-submit:hover span {
-    padding-right: 25px;
-}
-
-.contact-submit:hover span:after {
-    opacity: 1;
-    right: 0;
-}
 
 /* keyframes of slide -> animation */
 @keyframes slide {
