--- a/stylesheet.css
+++ b/stylesheet.css
@@ -11,6 +11,7 @@ a {
 body {
     margin: 0;
     font-family: system-ui;
+    overflow-x: hidden;
 }
 
 .header-top {
@@ -315,13 +316,14 @@ body {
     background-color: #f7f7f7;
     margin: auto;
     border-radius: 3px;
+    text-align: center;
 }
 
 .text {
     text-align: center;
     font-size: 30px;
     font-weight: bold;
-    margin: 10px 500px;
+    margin: 10px auto;
 }
 
 .nama,
@@ -330,11 +332,11 @@ body {
     width: 500px;
     text-align: center;
     font-size: 20px;
-    margin: 10px 500px;
+    margin: 10px auto;
 }
 
 .pesan {
-    margin: 10px 500px;
+    margin: 10px auto;
     height: 100px;
     width: 500px;
     text-align: center;
@@ -345,7 +347,7 @@ body {
 .kirim {
     height: 50px;
     font-size: 17px;
-    margin: 10px 500px;
+    margin: 10px auto;
     display: inline-block;
     border-radius: 4px;
     background-color: black;
@@ -393,7 +395,8 @@ body {
     color: #8D94A6;
     background-color: #2f3640;
     height: 80px;
-    padding: 15px 80px;
+    /* padding: 15px 80px; */
+    text-align: center;
 }
 
 .lower-left {
